--- a/gtk/theme/HighContrast/gtk.css
+++ b/gtk/theme/HighContrast/gtk.css
@@ -912,13 +912,14 @@ combobox {
     border-radius: 3px 0 0 3px; }
     combobox > entry.combo:dir(rtl) {
       border-radius: 0 3px 3px 0; }
-  combobox > button.combo, combobox > button.combo:backdrop {
-    border-radius: 0 3px 3px 0;
+  combobox > button.combo:not(:only-child):dir(ltr) {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
     border-left-style: none; }
-    combobox > button.combo:dir(rtl), combobox > button.combo:backdrop:dir(rtl) {
-      border-radius: 3px 0 0 3px;
-      border-left-style: solid;
-      border-right-style: none; }
+  combobox > button.combo:not(:only-child):dir(rtl) {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-right-style: none; }
 
 /************
  * Toolbars *
